# grpc-zk-example

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: validate.yml
client/: Cargo.toml  build.rs
client/src/: client.rs  main.rs
docker/client/: client.sh
docker/server/: Dockerfile
protos/: zkp.proto
server/: Cargo.toml
server/src/: main.rs  server.rs
