[package]
name = "grpc-zk-example-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
prost = { workspace = true }
tonic = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
num-bigint = { workspace = true }
structopt = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }